# LRansacCalibrator

./: .gitignore  CMakeLists.txt  README.md  entry.cxx
cmake/: common.cmake
cmake/modules/: README.md
include/calibration/: LidarImageCalibrator.h
ref/matlab/: detectCheckerboardPoints.m
ref/matlab/+vision/+internal/+calibration/+checkerboard/: Checkerboard.m  detectCheckerboard.m
ref/xie/: CalibPatterFitting.m  CalibPatterFitting_2.m  CalibrationLiDARandCamera.m  DrawCamera.m  DrawConfigure.m  DrawLidar.m  DrawValidationConfig.m  EagePoint.m  FinetuneFun.m  FinetuneFunWithoutH.m  InitialTuneFun.m  InterX.m  Loss_of_Our_Method.m  Loss_of_P_Method.m  Loss_of_P_Method_reality.m  P_method_cal.m  P_method_cal_reality.m  SelectLinePoint.m  SelectLinePoint_2.m  Select_Feature_Points.m  Select_Feature_Points_2.m  Select_Feature_Points_2_huang.m  Select_Feature_Points_old.m  ShowTheCornerImg.m  ShowTheCornerImg2.m  add_noice.m  buling.m  calib_lidar_to_cam.m  calib_lidar_to_cam_2.m  calibration_and_evaluation_data_in.m  conf.m  craft.m  datagenerate.m  evaluate_calibration_result.m  external_colibration_of_lidar.m  fitting_coordinate.m  fitting_line.m  fitting_line_for_image.m  fmin_undistortion.m  fmin_undistortion_reality.m  (+33 more)
ref/zhong/cpp/: CMakeLists.txt  evaluation.m  evaluation.py  evaluation_sum.py  test_regiongrow.cpp
ref/zhong/python/: bestParam.txt  board_plane_ransac.py  board_ransac.py  compound_segment.py  process_groundtruth.py  pypcl_test.py  python.pyproj  transfer_label.py  upsampling.py
source/calibration/: CMakeLists.txt  LidarImageCalibrator.cxx  SampleConsensusChessBoard.hxx
